--- a/deployment/ansible-vitam/roles/mongod/templates/mongod.conf.j2
+++ b/deployment/ansible-vitam/roles/mongod/templates/mongod.conf.j2
@@ -6,9 +6,11 @@
 
 # where to write logging data.
 systemLog:
-  destination: syslog
+  destination: file
   syslogFacility: local0
   logAppend: true
+  logRotate: reopen
+  path: {{ mongo_folder_log }}/mongod.log
 
 
 # Where and how to store data.
