--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -53,3 +53,7 @@ ontologyCacheMaxEntries: {{ vitam.ontologyCacheMaxEntries }}
 
 # Elasticsearch scroll timeout settings
 elasticSearchScrollTimeoutInMilliseconds: {{ vitam.elasticSearchScrollTimeoutInMilliseconds }}
+
+{% if vitam_struct.vitam_component == vitam.processing.vitam_component %}
+processEngineWaitForStepTimeout: 172800
+{% endif %}
