Item 7538 : Fix OfferLogs

--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-offer/init-offer-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-offer/init-offer-database.js.j2
@@ -4,11 +4,13 @@ db = db.getSiblingDB('offer')
 // Create indexes
 // A single collection can have no more than 64 indexes.
 db.OfferLog.createIndex( { "Container" : 1, "Sequence" : 1, "Time": -1 } )
-db.CompactedOfferLog.createIndex( { "Container" : 1, "SequenceStart" : 1, "SequenceEnd" : -1 } )
+db.CompactedOfferLog.createIndex( { "Container" : 1, "SequenceStart" : -1 } )
+db.CompactedOfferLog.createIndex( { "Container" : 1, "SequenceEnd" : 1 } )
 
-// Drop existing index container
+// Drop old indexes
 db.OfferLog.dropIndex( { "container" : 1} )
 db.OfferLog.dropIndex( { "Container" : 1} )
+db.CompactedOfferLog.dropIndex( { "Container": 1, "SequenceStart": 1, "SequenceEnd": -1 } )
 
 // For migration
 db.OfferLog.dropIndex( { "Container" : 1, "Sequence" : 1 } )
