--- a/deployment/ansible-vitam/roles/vitam/templates/service-componentid.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/service-componentid.json.j2
@@ -22,31 +22,31 @@
         "notes": "HTTP port opened",
         "tcp": "{{ ip_service }}:{{ vitam_struct.port_service }}",
 {% endif %}
-        "interval": "{{ vitam_struct.consul_check_business }}s"
+        "interval": "{{ vitam_struct.consul_business_check | default(consul_business_check) }}s"
       },
       {
         "name": "{{ vitam_struct.vitam_component }} : admin service check",
         "notes": "Status admin : /admin/v1/status",
         "http": "http://{{ ip_admin }}:{{ vitam_struct.port_admin }}/admin/v1/status",
-        "interval": "{{ vitam_struct.consul_admin_check }}s"
+        "interval": "{{ vitam_struct.consul_admin_check | default(consul_admin_check) }}s"
       }
-      {% if (vitam_struct.https_enabled != true) and (vitam_struct.vitam_component != vitam.elastickibanainterceptor.vitam_component)  and (vitam_struct.vitam_component != vitam.security_internal.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_demo.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_recette.vitam_component) and (vitam_struct.vitam_component != vitam.library.vitam_component) %}
+      {% if (vitam_struct.https_enabled != true) and (vitam_struct.vitam_component != vitam.elastickibanainterceptor.vitam_component) and (vitam_struct.vitam_component != vitam.security_internal.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_demo.vitam_component) and (vitam_struct.vitam_component != vitam.ihm_recette.vitam_component) and (vitam_struct.vitam_component != vitam.library.vitam_component) %}
       ,{
         "name": "{{ vitam_struct.vitam_component }} : http business service check",
         "notes": "Status business : /{{ vitam_struct.baseuri }}/v1/status",
         "http": "http://{{ ip_service }}:{{ vitam_struct.port_service }}/{{ vitam_struct.baseuri }}/v1/status",
-        "interval": "{{ vitam_struct.consul_admin_check }}s"        
+        "interval": "{{ vitam_struct.consul_admin_check | default(consul_admin_check) }}s"
       }
       {% endif %}
-      {% if  (vitam_struct.vitam_component == vitam.security_internal.vitam_component)  %}
+      {% if (vitam_struct.vitam_component == vitam.security_internal.vitam_component) %}
       ,{
         "name": "{{ vitam_struct.vitam_component }} : http business service check",
         "notes": "Status business : /status",
         "http": "http://{{ ip_service }}:{{ vitam_struct.port_service }}/status",
-        "interval": "{{ vitam_struct.consul_check_business }}s"        
+        "interval": "{{ vitam_struct.consul_business_check | default(consul_business_check) }}s"
       }
       {% endif %}
-      {% if (vitam_struct.vitam_component == vitam.worker.vitam_component) or (vitam_struct.vitam_component == vitam.ingestexternal.vitam_component)  %}
+      {% if (vitam_struct.vitam_component == vitam.worker.vitam_component) or (vitam_struct.vitam_component == vitam.ingestexternal.vitam_component) %}
       ,{
         "name": "Siegfried check",
         "notes": "Is siegfried running ?",
@@ -64,5 +64,5 @@
       }
 {% endif %}
     ]
-  } 
+  }
 }
