--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.metrics.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.metrics.conf.j2
@@ -2,23 +2,23 @@
 #
 #  Les différents clés disponibles pour ce fichier de configuration sont les suivantes :
 #
-#  metricsRest: true / false	Active ou non les métriques Jersey
-#  metricsJVM: true / false	Active ou non les métriques JVM
+#  metricsRest: true / false Active ou non les métriques Jersey
+#  metricsJVM: true / false  Active ou non les métriques JVM
 #
-#  metricReporter: ELASTICSEARCH | LOGBACK | NONE			défini le type de reporter
-#  metricReporterInterval: int > 0					défini l'interval entre chaque reporting
-#  metricReporterIntervalUnit: TimeUnit (ex: SECONDS, MINUTES...)	défini le type d'interval
+#  metricReporter: ELASTICSEARCH | LOGBACK | NONE - défini le type de reporter
+#  metricReporterInterval: int > 0 - défini l'interval entre chaque reporting
+#  metricReporterIntervalUnit: TimeUnit (ex: SECONDS, MINUTES...) - défini le type d'interval
 #
 #  Si le reporter est de type LOGBACK, la clé suivante est configurable:
-#  metricLogLevel: DEBUG | INFO | WARN | ERROR ... 			défini le niveau de log Logback
+#  metricLogLevel: DEBUG | INFO | WARN | ERROR - défini le niveau de log Logback
 #
 #  Si le reporter est de type ELASTICSEARCH, la clé suivante est obligatoire :
 #
 #  (un tableau avec les différentes adresses des bases ElasticSearch)
 #  metricReporterHosts:
-#  	- 127.0.0.1:9201
-#  	- 0.0.0.0:80
-#  	- 8.8.8.8:22
+#    - 127.0.0.1:9201
+#    - 0.0.0.0:80
+#    - 8.8.8.8:22
 
 {% if (groups['hosts_elasticsearch_log'] | length) > 0  %}
 metricsRest: true
@@ -29,7 +29,7 @@ metricReporterHosts:
 {% for host in groups['hosts_elasticsearch_log'] %}
    - "{{ hostvars[host]['ip_admin'] }}:{{ elasticsearch.log.port_http }}"
 {% endfor %}
-metricLogLevel: {{ vitam_struct.metricslevel|default('DEBUG') }}
-metricReporterInterval: {{ vitam_struct.metricsinterval|default('3') }}
-metricReporterIntervalUnit: {{ vitam_struct.metricsunit|default('MINUTES') }}
+metricLogLevel: {{ vitam_struct.metricslevel | default(metricslevel) }}
+metricReporterInterval: {{ vitam_struct.metricsinterval | default(metricsinterval) }}
+metricReporterIntervalUnit: {{ vitam_struct.metricsunit | default(metricsunit) }}
 {% endif %}
